# operating-systems

./: README.md
assignments/: README.md
project-ipc/: README.md
project-ipc/src/: CMakeLists.txt  README.md
project-ipc/src/Part1/: handle_with_cache.c  shm_channel.h  webproxy.c
project-ipc/src/Part2/: handle_with_cache.c  handle_with_curl.c  locals.txt  shm_channel.c  shm_channel.h  simplecached.c  webproxy.c
project-mt-server/: README.md
project-mt-server/gflib/: gfclient.c  gfserver.c
project-mt-server/mtgf/: gfclient_download.c  gfserver_main.c  handler.c
project-mt-server/transferclient/: transferclient.c  transferserver.c
project-rpc/: README.md
project-rpc/src/: CMakeLists.txt  README.md  minify_via_rpc.c  minifyjpeg.c  minifyjpeg.h  minifyjpeg.x  minifyjpeg_svc.c
research-papers/: README.md
